v1.1.0/modules/schema/pages/class/AngleRadians.adoc
= `AngleRadians`
:toclevels: 4


+++Phase angle in radians.+++


[cols="h,3",width=60%]
|===
| Type
| CIM data type class


| URI
| `cim:AngleRadians`


| CIM standard (perspective)
| IEC61970 (Grid)


|===

== Slots

[cols="1,1,2",width=100%]
|===
| Name | Type | Description

| `value`
| 0..1 +
https://w3id.org/linkml/Float[`float`]
//| +++None+++
| n/a

| `multiplier`
| 0..1 +
xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
//| +++None+++
| n/a

| `unit`
| 0..1 +
xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
//| +++None+++
| n/a
|===

////

'''


//[discrete]
[#multiplier]
=== `multiplier`


[cols="h,1",width=60%]
|===
| URI
| `cim:AngleRadians.multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
|===

//[discrete]
[#unit]
=== `unit`


[cols="h,1",width=60%]
|===
| URI
| `cim:AngleRadians.unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
|===

//[discrete]
[#value]
=== `value`


[cols="h,1",width=60%]
|===
| URI
| `cim:AngleRadians.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]
|===

////

== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/EnergySource.adoc[`EnergySource`] | xref::class/EnergySource.adoc#voltageAngle[`voltageAngle`]



| xref::class/SynchrocheckRelay.adoc[`SynchrocheckRelay`] | xref::class/SynchrocheckRelay.adoc#maxAngleDiff[`maxAngleDiff`]


|===

